--- a/README
+++ b/README
@@ -9,7 +9,9 @@ See INSTALL.
 Documentation
 -------------
 
-Contact
--------
+See HTML documents in doc/html.
+
+Author
+------
 
 * SumiTomohiko <SumiTomohiko@neko-daisuki.ddo.jp>
