Wrote outline of the tutorial.

--- a/README
+++ b/README
@@ -1,6 +1,17 @@
 This is Yog vesrion 0.0.1
 =========================
 
+Requirement
+-----------
+
+* Intel x86
+* Linux
+
+Download
+--------
+
+* http://github.com/SumiTomohiko/Yog/downloads
+
 Build Instructions
 ------------------
 
