Wrote summary of Yog in README.

--- a/README
+++ b/README
@@ -1,6 +1,8 @@
 This is Yog vesrion 0.0.1
 =========================
 
+Yog is a dynamic programming language designed as an intermediate between Python and Ruby.
+
 Requirement
 -----------
 
