Described about the issue tracking system.

--- a/README
+++ b/README
@@ -34,7 +34,8 @@ at the top of the source tree.
 Issue Tracking System
 ---------------------
 
-Original data of issues are in the ``issues`` dicretory of the source tree.
+You can see the issues at http://neko-daisuki.ddo.jp/~SumiTomohiko/yog/issues/index.html.
+Original data are in the ``issues`` dicretory of the source tree.
 
 Author
 ------
