--- a/README
+++ b/README
@@ -7,36 +7,55 @@ Requirement
 -----------
 
 * Intel x86
-* Linux
-
-Download
---------
-
-* http://github.com/SumiTomohiko/Yog/downloads
-
-Build Instructions
-------------------
-
-See INSTALL.
+* Ubuntu Linux 8.04
+* GCC 4.2.4
 
 Documentation
 -------------
 
-Online document is at http://neko-daisuki.ddo.jp/~SumiTomohiko/yog/0.0.1/index.html.
-See HTML documents in doc/html directory.
+Online documents are at http://neko-daisuki.ddo.jp/~SumiTomohiko/yog/0.0.1/index.html.
+Offline documents are available in the ``doc/html`` directory.
 
-You need Sphinx (http://sphinx.pocoo.org/) to make documents.
+Sphinx (http://sphinx.pocoo.org/) is needed to generate documents from the sources.
 For generating documents, do::
 
   $ make doc
 
 at the top of the source tree.
 
+Download
+--------
+
+See
+
+* http://github.com/SumiTomohiko/Yog/downloads
+
+Build Instructions
+------------------
+
+See ``INSTALL``.
+
 Issue Tracking System
 ---------------------
 
 You can see the issues at http://neko-daisuki.ddo.jp/~SumiTomohiko/yog/issues/index.html.
 Original data are in the ``issues`` dicretory of the source tree.
+
+Development progress & plans
+----------------------------
+
+by version 0.0.2
+~~~~~~~~~~~~~~~~
+
+* Port to Windows 2000.
+* Port to OpenBSD.
+* Port to FreeBSD.
+* Improve GC.
+
+by version 1.0.0
+~~~~~~~~~~~~~~~~
+
+* Stabilize.
 
 Author
 ------
