--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-This is Yog vesrion 0.0.3
+This is Yog vesrion 0.0.4
 =========================
 
 Yog is a dynamic programming language designed as an intermediate between Python and Ruby.
@@ -72,8 +72,7 @@ by version 0.0.3 (done)
 by version 0.0.4
 ~~~~~~~~~~~~~~~~
 
-* Improve GC.
-* Performance tuning.
+* Bugfix
 
 by version 1.0.0
 ~~~~~~~~~~~~~~~~
