--- a/README
+++ b/README
@@ -69,8 +69,8 @@ by version 0.0.3 (done)
 
 * Coroutine.
 
-by version 0.0.4
-~~~~~~~~~~~~~~~~
+by version 0.0.4 (done)
+~~~~~~~~~~~~~~~~~~~~~~~
 
 * Bugfix
 
