--- a/README
+++ b/README
@@ -20,21 +20,15 @@ Requirements
 * OS
   * Ubuntu Linux 8.04
   * FreeBSD 7.2
-  * OpenBSD 4.5
+  * OpenBSD 4.6
   * Windows 2000
 
 Documentation
 -------------
 
-Online documents are at http://neko-daisuki.ddo.jp/~SumiTomohiko/yog/0.0.1/index.html.
+Online documents are at http://SumiTomohiko.github.com/Yog/.
+
 Offline documents are available in the ``doc/html`` directory.
-
-Sphinx (http://sphinx.pocoo.org/) is needed to generate documents from the sources.
-For generating documents, do::
-
-  $ make doc
-
-at the top of the source tree.
 
 Download
 --------
@@ -74,10 +68,10 @@ by version 0.0.4 (done)
 
 * Bugfix
 
-by version 0.0.5
-~~~~~~~~~~~~~~~~
+by version 0.0.5 (done)
+~~~~~~~~~~~~~~~~~~~~~~~
 
-* wxWidgets binding
+* Generational GC
 
 by version 1.0.0
 ~~~~~~~~~~~~~~~~
