--- a/README
+++ b/README
@@ -26,7 +26,7 @@ Requirements
 Documentation
 -------------
 
-Online documents are at http://neko-daisuki.ddo.jp/~SumiTomohiko/yog/0.0.5/index.html.
+Online documents are at http://SumiTomohiko.github.com/Yog/.
 
 Offline documents are available in the ``doc/html`` directory.
 
