--- a/README
+++ b/README
@@ -73,6 +73,11 @@ by version 0.0.5 (done)
 
 * Generational GC
 
+by version 0.0.6
+~~~~~~~~~~~~~~~~
+
+* libffi binding
+
 by version 1.0.0
 ~~~~~~~~~~~~~~~~
 
