Updated the plan in README.

--- a/README
+++ b/README
@@ -73,8 +73,8 @@ by version 0.0.5 (done)
 
 * Generational GC
 
-by version 0.0.6
-~~~~~~~~~~~~~~~~
+by version 0.0.6 (done)
+~~~~~~~~~~~~~~~~~~~~~~~
 
 * libffi binding
 
