Changed plan of 0.0.7 in README.

--- a/README
+++ b/README
@@ -81,7 +81,7 @@ by version 0.0.6 (done)
 by version 0.0.7
 ~~~~~~~~~~~~~~~~
 
-* Bugfix
+* Performance tuning
 
 by version 1.0.0
 ~~~~~~~~~~~~~~~~
