Improved the description in README.

--- a/README
+++ b/README
@@ -1,7 +1,8 @@
 This is Yog vesrion 0.0.10
 ==========================
 
-Yog is a dynamic programming language designed as an intermediate between Pythonand Ruby.
+Yog is a dynamic programming language designed to have Python's usefully and
+look like Ruby.
 
 Features
 --------
