Wrote plan of version 1.0.0.

--- a/README
+++ b/README
@@ -48,6 +48,14 @@ Issue Tracking System
 You can see the issues at http://neko-daisuki.ddo.jp/~SumiTomohiko/yog/issues/index.html.
 Original data are in the ``issues`` dicretory of the source tree.
 
+Plan
+----
+
+version 1.0.0
+.............
+
+* GPL free
+
 Author
 ------
 
