Updated the documentation's url.

--- a/README
+++ b/README
@@ -28,16 +28,15 @@ Future version will support again.
 Documentation
 -------------
 
-Online documents are at http://SumiTomohiko.github.com/Yog/.
+Online documents are at
+http://neko-daisuki.ddo.jp/~SumiTomohiko/yog/doc/0.26.0/index.html.
 
 Offline documents are available in the ``doc/html`` directory.
 
 Download
 --------
 
-See
-
-* http://github.com/SumiTomohiko/Yog/downloads
+See http://neko-daisuki.ddo.jp/~SumiTomohiko/yog/index.html.
 
 Build Instructions
 ------------------
